force-app/main/default/objects/ProductReferential__c/ProductReferential__c.object-meta.xml
<CustomObject>
    <description>All information about base product</description>
    <label>Product Referential</label>
    <nameField>
        <label>Product name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products Referential</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>