force-app/main/default/objects/ProductReferential__c/fields/AccSize__c.field-meta.xml
<CustomField>
    <fullName>AccSize__c</fullName>
    <label>Acc size</label>
    <length>30</length>
    <type>Text</type>
</CustomField>