force-app/main/default/objects/ProductReferential__c/fields/AccTaille__c.field-meta.xml
<CustomField>
    <fullName>AccTaille__c</fullName>
    <label>Acc taille</label>
    <length>30</length>
    <type>Text</type>
</CustomField>