force-app/main/default/objects/ProductReferential__c/fields/AccVariant__c.field-meta.xml
<CustomField>
    <fullName>AccVariant__c</fullName>
    <label>Acc Variant</label>
    <length>30</length>
    <type>Text</type>
</CustomField>