force-app/main/default/objects/ProductReferential__c/fields/AestheticLine__c.field-meta.xml
<CustomField>
    <fullName>AestheticLine__c</fullName>
    <label>Aesthetic Line</label>
    <length>30</length>
    <type>Text</type>
</CustomField>