force-app/main/default/objects/ProductReferential__c/fields/Cites__c.field-meta.xml
<CustomField>
    <fullName>Cites__c</fullName>
    <label>Cites</label>
    <length>8</length>
    <type>Text</type>
</CustomField>