force-app/main/default/objects/ProductReferential__c/fields/Collection2__c.field-meta.xml
<CustomField>
    <fullName>Collection2__c</fullName>
    <description>SAP field name = collection end date
Used for Catalogue application</description>
    <label>Collection 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>