force-app/main/default/objects/ProductReferential__c/fields/Collection__c.field-meta.xml
<CustomField>
    <fullName>Collection__c</fullName>
    <label>Collection</label>
    <length>30</length>
    <type>Text</type>
</CustomField>