force-app/main/default/objects/ProductReferential__c/fields/ColorVariation__c.field-meta.xml
<CustomField>
    <fullName>ColorVariation__c</fullName>
    <label>Color Variation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>