force-app/main/default/objects/ProductReferential__c/fields/Creation_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Creation_Sort_Order__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Creation Sort Order</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>