force-app/main/default/objects/ProductReferential__c/fields/CustomsCode__c.field-meta.xml
<CustomField>
    <fullName>CustomsCode__c</fullName>
    <label>Customs Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>