force-app/main/default/objects/ProductReferential__c/fields/Departement__c.field-meta.xml
<CustomField>
    <fullName>Departement__c</fullName>
    <label>Departement</label>
    <length>30</length>
    <type>Text</type>
</CustomField>