force-app/main/default/objects/ProductReferential__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <length>30</length>
    <type>Text</type>
</CustomField>