force-app/main/default/objects/ProductReferential__c/fields/ImageLink1__c.field-meta.xml
<CustomField>
    <fullName>ImageLink1__c</fullName>
    <description>Get the file name of the first picture (used to display different picture size with Custom Setting ProductSettings__c): &apos;louis-vuitton--&apos; + SKUCode__c + &apos;_PM2_Front%20view.jpg&apos;</description>
    <formula>&apos;louis-vuitton--&apos; + SKUCode__c + &apos;_PM2_Front%20view.jpg&apos;</formula>
    <label>Image Link 1</label>
    <type>Text</type>
</CustomField>