force-app/main/default/objects/ProductReferential__c/fields/Is_Special_Sku__c.field-meta.xml
<CustomField>
    <fullName>Is_Special_Sku__c</fullName>
    <description>Indicates if a product results from a creation order and a codification request (starts with S followed by 5 numbers). This field helps preventing CA from selecting an S code SKU when placing a creation order</description>
    <formula>AND 
(
      LEFT( SKUCode__c , 1) = &quot;S&quot;,
      ISNUMBER(RIGHT(SKUCode__c, 5))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Special Sku</label>
    <type>Checkbox</type>
</CustomField>