force-app/main/default/objects/ProductReferential__c/fields/ItemDimensionGroup__c.field-meta.xml
<CustomField>
    <fullName>ItemDimensionGroup__c</fullName>
    <label>Item dimension group</label>
    <length>30</length>
    <type>Text</type>
</CustomField>