force-app/main/default/objects/ProductReferential__c/fields/JWL_Size__c.field-meta.xml
<CustomField>
    <fullName>JWL_Size__c</fullName>
    <description>Jewel size</description>
    <label>Jewel Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00L</fullName>
                <label>L</label>
            </value>
            <value>
                <fullName>00M</fullName>
                <label>M</label>
            </value>
            <value>
                <fullName>00S</fullName>
                <label>S</label>
            </value>
            <value>
                <fullName>015</fullName>
                <label>15</label>
            </value>
            <value>
                <fullName>016</fullName>
                <label>16</label>
            </value>
            <value>
                <fullName>017</fullName>
                <label>17</label>
            </value>
            <value>
                <fullName>018</fullName>
                <label>18</label>
            </value>
            <value>
                <fullName>019</fullName>
                <label>19</label>
            </value>
            <value>
                <fullName>020</fullName>
                <label>20</label>
            </value>
            <value>
                <fullName>035</fullName>
                <label>35</label>
            </value>
            <value>
                <fullName>039</fullName>
                <label>39</label>
            </value>
            <value>
                <fullName>040</fullName>
                <label>40</label>
            </value>
            <value>
                <fullName>041</fullName>
                <label>41</label>
            </value>
            <value>
                <fullName>044</fullName>
                <label>44</label>
            </value>
            <value>
                <fullName>045</fullName>
                <label>45</label>
            </value>
            <value>
                <fullName>046</fullName>
                <label>46</label>
            </value>
            <value>
                <fullName>047</fullName>
                <label>47</label>
            </value>
            <value>
                <fullName>048</fullName>
                <label>48</label>
            </value>
            <value>
                <fullName>049</fullName>
                <label>49</label>
            </value>
            <value>
                <fullName>050</fullName>
                <label>50</label>
            </value>
            <value>
                <fullName>051</fullName>
                <label>51</label>
            </value>
            <value>
                <fullName>052</fullName>
                <label>52</label>
            </value>
            <value>
                <fullName>053</fullName>
                <label>53</label>
            </value>
            <value>
                <fullName>054</fullName>
                <label>54</label>
            </value>
            <value>
                <fullName>055</fullName>
                <label>55</label>
            </value>
            <value>
                <fullName>056</fullName>
                <label>56</label>
            </value>
            <value>
                <fullName>057</fullName>
                <label>57</label>
            </value>
            <value>
                <fullName>058</fullName>
                <label>58</label>
            </value>
            <value>
                <fullName>059</fullName>
                <label>59</label>
            </value>
            <value>
                <fullName>060</fullName>
                <label>60</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>