force-app/main/default/objects/ProductReferential__c/fields/LaunchingYear__c.field-meta.xml
<CustomField>
    <fullName>LaunchingYear__c</fullName>
    <label>Launching Year</label>
    <length>30</length>
    <type>Text</type>
</CustomField>