force-app/main/default/objects/ProductReferential__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <label>Logo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>