force-app/main/default/objects/ProductReferential__c/fields/MacroColor__c.field-meta.xml
<CustomField>
    <fullName>MacroColor__c</fullName>
    <label>Macro Color</label>
    <length>30</length>
    <type>Text</type>
</CustomField>