force-app/main/default/objects/ProductReferential__c/fields/MacroFamily__c.field-meta.xml
<CustomField>
    <fullName>MacroFamily__c</fullName>
    <label>Macro Family</label>
    <length>30</length>
    <type>Text</type>
</CustomField>