force-app/main/default/objects/ProductReferential__c/fields/MainGroup__c.field-meta.xml
<CustomField>
    <fullName>MainGroup__c</fullName>
    <label>Main Group</label>
    <length>25</length>
    <type>Text</type>
</CustomField>