force-app/main/default/objects/ProductReferential__c/fields/MainMaterial2__c.field-meta.xml
<CustomField>
    <fullName>MainMaterial2__c</fullName>
    <label>Main Material 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>