force-app/main/default/objects/ProductReferential__c/fields/ManuFacturerProcess__c.field-meta.xml
<CustomField>
    <fullName>ManuFacturerProcess__c</fullName>
    <label>Manu Facturer Process</label>
    <length>30</length>
    <type>Text</type>
</CustomField>