force-app/main/default/objects/ProductReferential__c/fields/MarketingColor__c.field-meta.xml
<CustomField>
    <fullName>MarketingColor__c</fullName>
    <label>Marketing Color</label>
    <length>30</length>
    <type>Text</type>
</CustomField>