force-app/main/default/objects/ProductReferential__c/fields/MarketingMaterial__c.field-meta.xml
<CustomField>
    <fullName>MarketingMaterial__c</fullName>
    <label>Marketing Material</label>
    <length>30</length>
    <type>Text</type>
</CustomField>