force-app/main/default/objects/ProductReferential__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <length>18</length>
    <type>Text</type>
</CustomField>