force-app/main/default/objects/ProductReferential__c/fields/ModelCode__c.field-meta.xml
<CustomField>
    <fullName>ModelCode__c</fullName>
    <description>One model can have many products (Ready To Wear, Shoes, Jewels). Otherwise, the code will be different for LG, ACC…)</description>
    <label>Model Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>