force-app/main/default/objects/ProductReferential__c/fields/MTO__c.field-meta.xml
<CustomField>
    <fullName>MTO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[New Perso] is make to order (managed manually)</description>
    <label>MTO</label>
    <type>Checkbox</type>
</CustomField>