force-app/main/default/objects/ProductReferential__c/fields/NameSize__c.field-meta.xml
<CustomField>
    <fullName>NameSize__c</fullName>
    <label>Model Size</label>
    <length>30</length>
    <type>Text</type>
</CustomField>