force-app/main/default/objects/ProductReferential__c/fields/OrderableNorthAmerica__c.field-meta.xml
<CustomField>
    <fullName>OrderableNorthAmerica__c</fullName>
    <label>OrderableNorthAmerica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SAP_Orderable_Status</valueSetName>
    </valueSet>
</CustomField>