force-app/main/default/objects/ProductReferential__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <description>Holds the parent order number (if it exists). This field is populated by SAP on SKU starting with &apos;S&apos;. It is used by datastage in order to find the order (opportunity) which generated the creation of this S code SKU.</description>
    <label>Order Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>