force-app/main/default/objects/ProductReferential__c/fields/RTW_Color__c.field-meta.xml
<CustomField>
    <fullName>RTW_Color__c</fullName>
    <description>Ready to Wear color (RTW code from SAP)</description>
    <label>Ready to Wear Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>000</fullName>
                <label>BLANC OPTIQUE</label>
            </value>
            <value>
                <fullName>001</fullName>
                <label>BLANC</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>BLANC LAIT</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>BLANC CASSE</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>ECRU</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>IVOIRE</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>BEIGE</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>BEIGE ROSE</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>GREGE</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>CHAMPAGNE</label>
            </value>
            <value>
                <fullName>00M</fullName>
                <label>MONOGRAM BLANC</label>
            </value>
            <value>
                <fullName>010</fullName>
                <label>COQUILLE D OEUF</label>
            </value>
            <value>
                <fullName>011</fullName>
                <label>SABLE 2</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>CRAIE</label>
            </value>
            <value>
                <fullName>013</fullName>
                <label>BEIGE GRIS</label>
            </value>
            <value>
                <fullName>014</fullName>
                <label>PIERRE</label>
            </value>
            <value>
                <fullName>015</fullName>
                <label>INVISIBLE</label>
            </value>
            <value>
                <fullName>016</fullName>
                <label>BEIGE CHINE</label>
            </value>
            <value>
                <fullName>017</fullName>
                <label>BEIGE CLAIR F</label>
            </value>
            <value>
                <fullName>018</fullName>
                <label>CHAMPAGNE CHINE</label>
            </value>
            <value>
                <fullName>019</fullName>
                <label>BEIGE GRIS CHINE</label>
            </value>
            <value>
                <fullName>01B</fullName>
                <label>BLANC BRILLANT</label>
            </value>
            <value>
                <fullName>01M</fullName>
                <label>BLANC MAT</label>
            </value>
            <value>
                <fullName>020</fullName>
                <label>MINERAL</label>
            </value>
            <value>
                <fullName>021</fullName>
                <label>BEIGE MINERAL</label>
            </value>
            <value>
                <fullName>022</fullName>
                <label>GALET</label>
            </value>
            <value>
                <fullName>023</fullName>
                <label>GALET 2</label>
            </value>
            <value>
                <fullName>024</fullName>
                <label>BLANC GLACIER</label>
            </value>
            <value>
                <fullName>025</fullName>
                <label>VANILLE</label>
            </value>
            <value>
                <fullName>026</fullName>
                <label>BLANC / BLEU</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>