force-app/main/default/objects/ProductReferential__c/fields/SalesType__c.field-meta.xml
<CustomField>
    <fullName>SalesType__c</fullName>
    <label>Sales type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>