force-app/main/default/objects/ProductReferential__c/fields/Seasonality__c.field-meta.xml
<CustomField>
    <fullName>Seasonality__c</fullName>
    <label>Seasonality</label>
    <length>30</length>
    <type>Text</type>
</CustomField>