force-app/main/default/objects/ProductReferential__c/fields/SecondaryColor__c.field-meta.xml
<CustomField>
    <fullName>SecondaryColor__c</fullName>
    <label>SecondaryColor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>