force-app/main/default/objects/ProductReferential__c/fields/SecondaryMaterial__c.field-meta.xml
<CustomField>
    <fullName>SecondaryMaterial__c</fullName>
    <label>SecondaryMaterial</label>
    <length>30</length>
    <type>Text</type>
</CustomField>