force-app/main/default/objects/ProductReferential__c/fields/ShapeDailyBags__c.field-meta.xml
<CustomField>
    <fullName>ShapeDailyBags__c</fullName>
    <label>Shape Daily Bags</label>
    <length>30</length>
    <type>Text</type>
</CustomField>