force-app/main/default/objects/ProductReferential__c/fields/SHO_Color__c.field-meta.xml
<CustomField>
    <fullName>SHO_Color__c</fullName>
    <description>Shoe color. 
Different field than Ready to wear as SAP has 2 distinct tables for colors. Avoid 1 field for RTW+Shoe with potential duplicate.</description>
    <label>Shoe Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>NEUTRE</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>BLANC</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>NOIR</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>NOIX DE COCO</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>ARGENT</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>ANTHRACITE</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>OR.</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>TAUPE</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>AUBERGINE</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>CASSIS</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>ROUGE</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>ORANGE</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>BORDEAUX</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>CORAIL</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>ROSE</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>BRONZE</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>VERMEIL</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>VIOLET</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>SAUMON</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>GRENAT</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>BLEU</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>BABY BLUE</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>MARINE</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>NUIT</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>PETROLE.</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>AZUR</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>CIEL</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>ECUME</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>TURQUOISE</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>FRAMBOISE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>