force-app/main/default/objects/ProductReferential__c/fields/SHO_Size__c.field-meta.xml
<CustomField>
    <fullName>SHO_Size__c</fullName>
    <description>Shoe size. 
Label should be divided by 10 + remove the first letter is equals to 0</description>
    <label>Shoe Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>010</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>015</fullName>
                <label>1.5</label>
            </value>
            <value>
                <fullName>020</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>025</fullName>
                <label>2.5</label>
            </value>
            <value>
                <fullName>030</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>035</fullName>
                <label>3.5</label>
            </value>
            <value>
                <fullName>040</fullName>
                <label>4</label>
            </value>
            <value>
                <fullName>045</fullName>
                <label>4.5</label>
            </value>
            <value>
                <fullName>050</fullName>
                <label>5</label>
            </value>
            <value>
                <fullName>055</fullName>
                <label>5.5</label>
            </value>
            <value>
                <fullName>060</fullName>
                <label>6</label>
            </value>
            <value>
                <fullName>065</fullName>
                <label>6.5</label>
            </value>
            <value>
                <fullName>070</fullName>
                <label>7</label>
            </value>
            <value>
                <fullName>075</fullName>
                <label>7.5</label>
            </value>
            <value>
                <fullName>080</fullName>
                <label>8</label>
            </value>
            <value>
                <fullName>085</fullName>
                <label>8.5</label>
            </value>
            <value>
                <fullName>090</fullName>
                <label>9</label>
            </value>
            <value>
                <fullName>095</fullName>
                <label>9.5</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>10</label>
            </value>
            <value>
                <fullName>105</fullName>
                <label>10.5</label>
            </value>
            <value>
                <fullName>110</fullName>
                <label>11</label>
            </value>
            <value>
                <fullName>115</fullName>
                <label>11.5</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>12</label>
            </value>
            <value>
                <fullName>125</fullName>
                <label>12.5</label>
            </value>
            <value>
                <fullName>130</fullName>
                <label>13</label>
            </value>
            <value>
                <fullName>135</fullName>
                <label>13.5</label>
            </value>
            <value>
                <fullName>140</fullName>
                <label>14</label>
            </value>
            <value>
                <fullName>150</fullName>
                <label>15</label>
            </value>
            <value>
                <fullName>240</fullName>
                <label>24</label>
            </value>
            <value>
                <fullName>245</fullName>
                <label>24.5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>