force-app/main/default/objects/ProductReferential__c/fields/SHO_Width__c.field-meta.xml
<CustomField>
    <fullName>SHO_Width__c</fullName>
    <description>Shoe width</description>
    <label>Shoe Width</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
                <label>Obsolete - Italian</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Large</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Normal</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Obsolete - English</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>