force-app/main/default/objects/ProductReferential__c/fields/SKUCode__c.field-meta.xml
<CustomField>
    <fullName>SKUCode__c</fullName>
    <externalId>true</externalId>
    <label>Base SKU Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>