force-app/main/default/objects/ProductReferential__c/fields/SPO_Category__c.field-meta.xml
<CustomField>
    <fullName>SPO_Category__c</fullName>
    <description>[Special Order] simplify the Categories for Special Order : &apos;Leather Goods&apos; or BELTS</description>
    <formula>IF (
  ISPICKVAL(ProductCategory__c, &apos;Accessories&apos;),
  ItemDimensionGroup__c, /* Display BELTS for example and not Accessories for Special Order */
  TEXT(ProductCategory__c)
)</formula>
    <label>SPO_Category</label>
    <type>Text</type>
</CustomField>