force-app/main/default/objects/ProductReferential__c/fields/SPO_DescriptionWatchDescription__c.field-meta.xml
<CustomField>
    <fullName>SPO_DescriptionWatchDescription__c</fullName>
    <label>Description watch description</label>
    <type>TextArea</type>
</CustomField>